==== x.x.x (YYYY-MM-DD)

[float]
===== Breaking changes
- Breaking change

[float]
===== Deprecated
- Deprecation {pull}2526[#2526]

[float]
===== Added
- Feature {pull}2526[#2526]

[float]
===== Changed
- Change {pull}2526[#2526]

[float]
===== Fixed
- Fix {pull}2526[#2526]

[float]
[[unreleased]]
==== Unreleased
////

[[release-notes-3.x]]
=== Ruby Agent version 3.x

[float]
[[release-notes-3.7.0]]
==== 3.7.0 (2020-05-14)

[float]
===== Changed

- Make config values dynamic so they can be changed via the remote config {pull}747[#747]
- Log the updated options from central config in addition to cumulative modifications {pull}758[#758]

[float]
===== Fixed

- Ensure that the log level is updated for the config's logger when value is changed {pull}755[#755]
- Set config `false` values to `false`, not `nil` {pull}761[#761]
- Ensure that the previously running agent's config is used in `ElasticAPM.restart` {pull}763[#763]
- Handle the Resque spy's payload class value being a String or Class and update docs {pull}768[#768]
- Add finalizer on ProxyPipe::Write so Zlib::GzipWriter is properly closed {pull}787[#787]

[float]
===== Added

- Add enabled config option, replacing active {pull}669[#669]
- Add recording config option {pull}765[#765]
- Add support for `SuckerPunch` {pull}775[#775]
- Support forking: Detect forking and restart agent tasks and background threads {pull}783[#783]

[[release-notes-3.6.0]]
==== 3.6.0 (2020-03-10)

[float]
===== Added

- Support for gRPC using the `grpc` gem (Experimental) {pull}669[#669]
- GraphQL support (experimental) {pull}721[#721]
- Add `span.context.destination.address` and `span.context.destination.port` when available. {pull}722[#722]
- Add support for Resque. {pull}729[#729]

[float]
===== Changed

- The new SQL parser is used by default {pull}730[#730]

[[release-notes-3.5.0]]
==== 3.5.0 (2020-02-12)

[float]
===== Added

- Pass along tracestate headers and add prefixless Traceparent header {pull}694[#694]